--- a/TODO
+++ b/TODO
@@ -1,4 +1,22 @@
-- Bug : When updating feeds, sometimes spinner keeps going forever. Why?
+- Bug: In Safari 4.0, collapsing articles doesn't work anymore.
+- Bug: APOD has an embedded Digg script,
+	<script src="http://digg.com/...></script>
+  which uses document.write() to add a Digg button to the page.
+
+	When this is executed via "some_element.innerHTML =...", it
+  looks as though "document.write()" overwrites the contents of the
+  page. This messes things up royally.
+	Perhaps the post can be wrapped in an <iframe> to sandbox it.
+  How can data be added to an iframe? Perhaps see
+  http://dean.edwards.name/weblog/2006/11/sandbox/
+	<iframe> will probably soon be deprecated. Can <object> be
+  used instead?
+	Try using
+	.item-content {
+		overflow:	auto;
+	}
+  to make the enclosing box resize itself to the proper size.
+- Bug: When updating feeds, sometimes spinner keeps going forever. Why?
 - Bug: When Ajax updates feeds, it doesn't notice updates to the list
   of feeds.
 	Perhaps when updating all, update.php should append a list of
