--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-- Fix view.php to send list in JSON format, for mobile skin.
+- Try following directions in INSTALL file.
+  Try putting things in as many different places as possible.  
 - Brian has expressed interest. Clean things up so they're pretty
   enough for non-me people.
 - Bug: In Safari 4.0, collapsing articles doesn't work anymore.
@@ -11,27 +12,6 @@
   Clicking on the bottom collapse bar works. Clicking on the upper one
   works once you scroll.
 	Might be sufficient to scroll by 0 pixels.
-- Bug: APOD has an embedded Digg script,
-	<script src="http://digg.com/...></script>
-  which uses document.write() to add a Digg button to the page.
-  Currently worked around, but it would be nice to have the JS execute
-  without trashing everything on the page.
-
-	When this is executed via "some_element.innerHTML =...", it
-  looks as though "document.write()" overwrites the contents of the
-  page. This messes things up royally.
-	Perhaps the post can be wrapped in an <iframe> to sandbox it.
-  How can data be added to an iframe? Perhaps see
-  http://dean.edwards.name/weblog/2006/11/sandbox/
-	<iframe> will probably soon be deprecated. Can <object> be
-  used instead?
-	Try using
-	.item-content {
-		overflow:	auto;
-	}
-  to make the enclosing box resize itself to the proper size.
-	Perhaps can open an iframe/object onto about:blank, then write
-  the article to the new document.
 - Bug: When updating feeds, sometimes spinner keeps going forever. Why?
 - Bug: When Ajax updates feeds, it doesn't notice updates to the list
   of feeds.
@@ -50,6 +30,19 @@
   screen, if possible.
 - Bug-ish: when marking a feed as inactive, get redirected back to it.
   This is bogus.
+- Simpler AJAX fetch:
+	// loadXMLDoc
+	// Fetch data from a URL, and return it.
+	function loadXMLDoc(url, data)
+	{
+	        var xhttp = new XMLHttpRequest();
+	
+	        xhttp.open("GET", url, false);
+	        if (data == undefined)
+	                data = "";
+	        xhttp.send(data);
+	        return xhttp.responseXML;
+	}
 - Read this to make iPhone-friendly skins:
   http://developer.apple.com/safari/library/documentation/AppleApplications/Reference/SafariWebContent/OptimizingforSafarioniPhone/OptimizingforSafarioniPhone.html
 - On iPhone, when mark an entry as read (using fancy skin), the
@@ -59,9 +52,23 @@
 	- Finally item collapses
   this is bogus: item collapse immediately, and change color only when
   markitem has returned.
-- Perhaps add an entry in the 'options' table, saying which
-  version/revision of Newsbite this is, and perhaps another saying
-  which version of the schema.
+- Make updates smarter about updating when no network available.
+  On iPhone, don't contact the network if there's no network to contact.
+- Use cookies for authentication, to remain logged in when iPod
+  forgets password. See
+	http://www.lightbluetouchpaper.org/2008/04/25/wordpress-25-cookie-integrity-protection-vulnerability/
+	http://pdos.csail.mit.edu/papers/webauth:tr.pdf
+  and especially
+	http://www.cse.msu.edu/~alexliu/publications/Cookie/cookie.pdf
+
+	Probably best to use Fu's protocol rather than Chu's: Chu's
+  protocol requires there to be an SSL key, which isn't practical in
+  this case.
+	It's vulnerable to replay attacks, but seems good enough for
+  WordPress.
+- Add an entry in the 'options' table, saying which version/revision
+  of Newsbite this is, and perhaps another saying which version of the
+  schema.
 - Ads: perhaps should generalize: look for
   <a href="$some_ad_url">...</a>, optionally wrapped in <p>...</p>.
 - WaPo duplicates: "Today's Highlights" can duplicate stories from
