--- a/TODO
+++ b/TODO
@@ -1,7 +1,3 @@
-- Add to INSTALL: set CRON=true environent variable, otherwise feeds
-  won't update because of authentication.
-	For that matter, is there a better way of checking whether a
-  script is running from cron or as a CGI script?
 - Bug?: There are some old articles in the database. Why aren't they
   being cleaned out properly?
 	db_update_feed() only cleans out whichever feed it was called
@@ -33,12 +29,8 @@
 - Bug: when collapse from bottom collapse bar, window scrolls uglily.
   Ought to fix this: bottom edge should remain at the same place on
   screen, if possible.
-- Mention SERVER_SECRET in install instructions.
-	Perhaps include a utility for generating a random string.
-- common.inc requires a setting from config.inc. So just #include it
-  there.
-	At which point, might as well have all scripts that include
-  both just include common.inc.
+- All scripts that #include common.inc already #include config.inc.
+  Remove the redundant line.
 - Use cookies for authentication, to remain logged in when iPod
   forgets password. See
 	http://www.lightbluetouchpaper.org/2008/04/25/wordpress-25-cookie-integrity-protection-vulnerability/
@@ -57,6 +49,9 @@
   Or will that expire as soon as the browser forgets the password?
 - Bug-ish: when marking a feed as inactive, get redirected back to it.
   This is bogus.
+- The various .js and .css files are getting large enough to be
+  unmanageable. Break them up into chunks and build them with m4 or
+  something.
 - Do some profiling: find out why under Safari it takes so long for an
   article to collapse when it's marked read.
 	Bleah. Problem only seems to show up on iPod/iPad. Can the
